test_yuriiq/catalog/language/russian/product/product.php
<?php

// reviews
$_['reviews_login']	= 'Для комментирования - зарегистрируйтесь.';

// text
$_['text_error']	= 'Товар не найден!';
$_['text_weight']	= 'Вес:';
$_['text_tags']	= 'Метки:';
$_['text_share']	= 'Поделиться';
$_['text_instock']	= 'Есть в наличии';
$_['text_payment_profile']	= 'Профиль оплаты;';
$_['text_write']	= 'Написать отзыв';
$_['text_brand']	= 'Бренд';
$_['text_day']	= 'День';
$_['text_wait']	= 'Пожалуйста, подождите!';
$_['text_reward']	= 'Бонусные баллы:';
$_['text_model']	= 'Модель:';
$_['text_month']	= 'Месяц';
$_['text_week']	= 'Неделя';
$_['text_manufacturer']	= 'Производитель:';
$_['text_points']	= 'Цена в бонусных баллах:';
$_['text_stock']	= 'Наличие:';
$_['text_option']	= 'Доступные варианты';
$_['text_success']	= 'Спасибо за ваш отзыв. Он поступил администратору для проверки на спам и вскоре будет опубликован.';
$_['text_or']	= '- или -';
$_['text_minimum']	= 'Минимальное количество заказа этого товара: %s';
$_['text_on']	= ' on ';
$_['text_discount']	= '%s или более: %s';
$_['text_note']	= '<span style="color: #FF0000;">Примечание:</span> Отзывы публикуются без премодерации. Пожалуйста, будьте вежливы.';
$_['text_year']	= 'Год';
$_['text_dimension']	= 'Размеры (Д*Ш*В):';
$_['text_semi_month']	= 'пол месяца';
$_['text_upload']	= 'Ваш файл был успешно загружен!';
$_['text_search']	= 'Поиск';
$_['text_tax']	= 'Без НДС:';
$_['text_qty']	= 'Кол-во:';
$_['text_reviews']	= 'Отзывы';
$_['text_price']	= 'Цена:';
$_['text_no_reviews']	= 'Нет отзывов об этом товаре.';

// error
$_['error_captcha']	= 'Код, указанный на картинке, введен неверно!';
$_['error_upload']	= 'Требуется загрузка файла!';
$_['error_filetype']	= 'Недопустимый тип файла!';
$_['error_name']	= 'Имя должно быть от 3 до 25 символов!';
$_['error_text']	= 'Текст отзыва должен быть от 25 до 1000 символов!';
$_['error_rating']	= 'Пожалуйста, выберите оценку!';
$_['error_filename']	= 'Имя файла должно быть от 3 до 64 символов!';

// basic
$_['basic_attribute']	= 'Базовые параметры';

// button
$_['button_edit_product']	= 'Редактировать товар';

// admin
$_['admin_author']	= 'Ответ администрации';

// entry
$_['entry_rating']	= 'Оценка:';
$_['entry_review']	= 'Ваш отзыв:';
$_['entry_bad']	= 'Плохо';
$_['entry_good']	= 'Хорошо';
$_['entry_name']	= 'Ваше имя:';
$_['entry_captcha']	= 'Введите код, указанный на картинке:';

// tab
$_['tab_blog_related']	= 'Статьи';
$_['tab_downloads']	= 'Загрузки';
$_['tab_related']	= 'Рекомендуемые';
$_['tab_review']	= 'Отзывы';
$_['tab_description']	= 'Описание';
$_['tab_related2']	= 'Похожие';
$_['tab_attribute']	= 'Характеристики';
?>